# pkg/api/v1/user.pb.go
@@ -30,6 +30,8 @@ type UpsertResponse struct {
 	Api                  string   `protobuf:"bytes,1,opt,name=api,proto3" json:"api,omitempty"`
 	Status               string   `protobuf:"bytes,2,opt,name=status,proto3" json:"status,omitempty"`
 	Id                   string   `protobuf:"bytes,3,opt,name=id,proto3" json:"id,omitempty"`
+	Matched              string   `protobuf:"bytes,4,opt,name=matched,proto3" json:"matched,omitempty"`
+	Modified             string   `protobuf:"bytes,5,opt,name=modified,proto3" json:"modified,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -77,6 +79,20 @@ func (m *UpsertResponse) GetStatus() string {
 func (m *UpsertResponse) GetId() string {
 	if m != nil {
 		return m.Id
+	}
+	return ""
+}
+
+func (m *UpsertResponse) GetMatched() string {
+	if m != nil {
+		return m.Matched
+	}
+	return ""
+}
+
+func (m *UpsertResponse) GetModified() string {
+	if m != nil {
+		return m.Modified
 	}
 	return ""
 }
@@ -456,50 +472,51 @@ func init() {
 func init() { proto.RegisterFile("user.proto", fileDescriptor_116e343673f7ffaf) }
 
 var fileDescriptor_116e343673f7ffaf = []byte{
-	// 674 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x94, 0xdd, 0x6e, 0xd3, 0x48,
-	0x14, 0xc7, 0x65, 0x3b, 0x49, 0x37, 0x27, 0x6d, 0x94, 0x9d, 0x76, 0xab, 0x6c, 0xb6, 0xea, 0x5a,
-	0xd6, 0x4a, 0xad, 0xa2, 0x6d, 0xdc, 0x66, 0xbb, 0x37, 0xb9, 0xda, 0x76, 0x11, 0x05, 0x24, 0x84,
-	0x6a, 0x94, 0x1b, 0x84, 0x84, 0x26, 0xf6, 0xc1, 0x19, 0x70, 0xec, 0x61, 0x66, 0xdc, 0x0f, 0x21,
-	0x6e, 0x78, 0x04, 0x10, 0x37, 0x5c, 0xf0, 0x12, 0x5c, 0x73, 0xc1, 0x33, 0xf0, 0x0a, 0x3c, 0x08,
-	0x9a, 0x71, 0x92, 0xe6, 0x03, 0x50, 0xe1, 0xca, 0x73, 0xfe, 0x33, 0xe7, 0xa7, 0xff, 0x39, 0x67,
-	0x3c, 0x00, 0xb9, 0x44, 0xd1, 0xe1, 0x22, 0x53, 0x19, 0x29, 0xe9, 0x75, 0x6b, 0x2b, 0xce, 0xb2,
-	0x38, 0x41, 0x9f, 0x72, 0xe6, 0xd3, 0x34, 0xcd, 0x14, 0x55, 0x2c, 0x4b, 0x65, 0x71, 0xa6, 0xf5,
-	0xb7, 0xf9, 0x84, 0x7b, 0x31, 0xa6, 0x7b, 0xf2, 0x9c, 0xc6, 0x31, 0x0a, 0x3f, 0xe3, 0xe6, 0xc4,
-	0xf2, 0x69, 0xef, 0x0e, 0xd4, 0xfb, 0x5c, 0xa2, 0x50, 0x01, 0x4a, 0x9e, 0xa5, 0x12, 0x49, 0x03,
-	0x1c, 0xca, 0x59, 0xd3, 0x72, 0xad, 0xdd, 0x6a, 0xa0, 0x97, 0x64, 0x13, 0x2a, 0x52, 0x51, 0x95,
-	0xcb, 0xa6, 0x6d, 0xc4, 0x71, 0x44, 0xea, 0x60, 0xb3, 0xa8, 0xe9, 0x18, 0xcd, 0x66, 0x91, 0x77,
-	0x0a, 0x6b, 0x13, 0xd6, 0xb3, 0x1c, 0xa5, 0xfa, 0x0a, 0x6a, 0x1b, 0x4c, 0x09, 0x06, 0x54, 0xeb,
-	0x42, 0xc7, 0xd4, 0xd6, 0x97, 0x28, 0x02, 0xa3, 0x2f, 0x21, 0x1f, 0xc0, 0xea, 0x4d, 0x96, 0x46,
-	0xdf, 0x31, 0xe7, 0x42, 0x59, 0x67, 0x6a, 0x6f, 0xce, 0x02, 0xb2, 0xd8, 0x98, 0xb1, 0xef, 0xcc,
-	0xda, 0xf7, 0xde, 0x58, 0x50, 0x2b, 0xe0, 0xdf, 0x72, 0x5b, 0xb8, 0xb1, 0x27, 0x6e, 0x48, 0x0b,
-	0x7e, 0x49, 0x68, 0x1a, 0xe7, 0x34, 0xc6, 0x31, 0x6b, 0x1a, 0x93, 0x6d, 0x00, 0xbc, 0xe0, 0x28,
-	0x18, 0xa6, 0x21, 0x36, 0x4b, 0x66, 0x77, 0x46, 0x21, 0x04, 0x4a, 0x5c, 0xe7, 0x95, 0x5d, 0x6b,
-	0xb7, 0x1c, 0x98, 0x35, 0xd9, 0x80, 0x72, 0xc2, 0x46, 0x4c, 0x35, 0x2b, 0x46, 0x2c, 0x02, 0xaf,
-	0x07, 0xf5, 0x1b, 0x98, 0xa0, 0xc2, 0x1f, 0x1f, 0x89, 0x77, 0x00, 0x6b, 0x93, 0xdc, 0x6b, 0x16,
-	0xe5, 0xbd, 0xb7, 0xa0, 0xa4, 0xdb, 0xa5, 0xdd, 0xe0, 0x88, 0xb2, 0x64, 0x7c, 0xb8, 0x08, 0x74,
-	0xcd, 0x9c, 0x4a, 0x79, 0x9e, 0x89, 0x49, 0xd2, 0x34, 0xd6, 0x7b, 0xba, 0xc5, 0x29, 0x1d, 0x4d,
-	0xfb, 0x31, 0x89, 0xc9, 0x9f, 0x50, 0x4b, 0xa8, 0x54, 0x8f, 0x68, 0xa8, 0xd8, 0x59, 0xd1, 0x90,
-	0x72, 0x00, 0x5a, 0x3a, 0x32, 0xca, 0x42, 0xc3, 0xca, 0x4b, 0x0d, 0xdb, 0x82, 0xea, 0xa4, 0xb9,
-	0xb2, 0x59, 0x71, 0x9d, 0xdd, 0x6a, 0x70, 0x25, 0x74, 0xdf, 0x39, 0x50, 0xd3, 0xae, 0xef, 0xa3,
-	0x38, 0x63, 0x21, 0x92, 0xbb, 0x00, 0xff, 0x0b, 0xa4, 0x0a, 0x4d, 0x29, 0xeb, 0xe3, 0x5b, 0x30,
-	0x7b, 0x1b, 0x5b, 0x1b, 0xf3, 0x62, 0xd1, 0x5b, 0x6f, 0xe3, 0xe5, 0xa7, 0xcf, 0xaf, 0xed, 0xba,
-	0x57, 0xf5, 0xcf, 0x0e, 0x7c, 0x73, 0x61, 0x7a, 0x56, 0x9b, 0x04, 0x00, 0x7d, 0x1e, 0xfd, 0x04,
-	0xee, 0x77, 0x83, 0x5b, 0xf7, 0xea, 0x53, 0x9c, 0xff, 0x9c, 0x45, 0x2f, 0x34, 0xf3, 0x1e, 0x40,
-	0x31, 0x9b, 0x59, 0xe6, 0xdc, 0xb4, 0x26, 0xcc, 0xf9, 0xf1, 0x7b, 0x9b, 0x86, 0xd9, 0x68, 0x2f,
-	0x30, 0xc9, 0x2d, 0x58, 0x39, 0x41, 0x75, 0x7c, 0x79, 0x3b, 0x22, 0xbf, 0x16, 0x89, 0x33, 0xd7,
-	0xb9, 0x45, 0x66, 0xa5, 0x79, 0x12, 0x59, 0x24, 0x9d, 0xea, 0x3f, 0x21, 0x51, 0x28, 0xfa, 0xe6,
-	0x8f, 0xb9, 0x26, 0xed, 0x0f, 0x43, 0xfb, 0xcd, 0x6b, 0x5c, 0xd1, 0x24, 0x52, 0x11, 0x0e, 0x7b,
-	0x56, 0xfb, 0xf8, 0xa3, 0xf5, 0xea, 0xe8, 0x83, 0x45, 0x1e, 0xc2, 0xaa, 0xde, 0x71, 0x65, 0x31,
-	0x27, 0xef, 0x64, 0x3e, 0x26, 0x3b, 0x43, 0xa5, 0xb8, 0xec, 0xf9, 0x7e, 0xcc, 0xd4, 0x30, 0x1f,
-	0x74, 0xc2, 0x6c, 0xe4, 0x87, 0x4f, 0x07, 0x03, 0x9a, 0x24, 0xbe, 0x1c, 0xe5, 0xe2, 0x31, 0x4b,
-	0xf7, 0xcc, 0xa3, 0x57, 0x1f, 0x24, 0x74, 0xf8, 0xdf, 0x90, 0x72, 0x7e, 0xd9, 0xc9, 0x44, 0xdc,
-	0x75, 0x0e, 0x3a, 0xfb, 0x6d, 0xdb, 0xb2, 0xbb, 0x0d, 0xca, 0x79, 0xc2, 0x42, 0xf3, 0xaa, 0xf9,
-	0x4f, 0x64, 0x96, 0xf6, 0x96, 0x94, 0xe0, 0x5f, 0x70, 0x0e, 0xf7, 0x0f, 0x49, 0x07, 0xfe, 0x0a,
-	0x50, 0xe5, 0x22, 0xc5, 0xc8, 0x3d, 0x1f, 0x62, 0xea, 0x0a, 0x94, 0x59, 0x2e, 0x42, 0x74, 0xa3,
-	0x0c, 0x65, 0xba, 0xa3, 0x5c, 0xbc, 0x60, 0x52, 0x91, 0x0a, 0x94, 0xde, 0xda, 0xd6, 0xca, 0xa0,
-	0x62, 0xde, 0xc8, 0x7f, 0xbe, 0x04, 0x00, 0x00, 0xff, 0xff, 0xd2, 0xa7, 0xa3, 0x69, 0x83, 0x05,
-	0x00, 0x00,
+	// 698 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x54, 0xcd, 0x6e, 0xd3, 0x4c,
+	0x14, 0x95, 0xed, 0x24, 0x6d, 0x6e, 0xda, 0x28, 0xdf, 0xb4, 0x5f, 0xe5, 0x2f, 0x5f, 0x55, 0x2c,
+	0x0b, 0xa9, 0x55, 0x44, 0xe3, 0x36, 0x94, 0x4d, 0x56, 0xb4, 0x20, 0x0a, 0x0b, 0x84, 0x6a, 0x94,
+	0x0d, 0x42, 0x42, 0x13, 0xfb, 0xd6, 0x19, 0x70, 0x6c, 0x33, 0x33, 0xee, 0x8f, 0x10, 0x12, 0xe2,
+	0x11, 0x40, 0x6c, 0x58, 0xf0, 0x12, 0xac, 0x59, 0xf0, 0x0c, 0xbc, 0x02, 0x0f, 0x82, 0x66, 0x9c,
+	0xa4, 0x49, 0x0a, 0xa8, 0xb0, 0xca, 0x9c, 0x33, 0x73, 0x4f, 0xee, 0x39, 0x77, 0x3c, 0x00, 0xb9,
+	0x40, 0xde, 0xce, 0x78, 0x2a, 0x53, 0x52, 0x52, 0xeb, 0xe6, 0x7a, 0x94, 0xa6, 0x51, 0x8c, 0x1e,
+	0xcd, 0x98, 0x47, 0x93, 0x24, 0x95, 0x54, 0xb2, 0x34, 0x11, 0xc5, 0x99, 0xe6, 0x0d, 0xfd, 0x13,
+	0x6c, 0x47, 0x98, 0x6c, 0x8b, 0x53, 0x1a, 0x45, 0xc8, 0xbd, 0x34, 0xd3, 0x27, 0x2e, 0x9f, 0x76,
+	0xdf, 0x18, 0x50, 0xef, 0x65, 0x02, 0xb9, 0xf4, 0x51, 0x64, 0x69, 0x22, 0x90, 0x34, 0xc0, 0xa2,
+	0x19, 0xb3, 0x0d, 0xc7, 0xd8, 0xaa, 0xfa, 0x6a, 0x49, 0xd6, 0xa0, 0x22, 0x24, 0x95, 0xb9, 0xb0,
+	0x4d, 0x4d, 0x8e, 0x10, 0xa9, 0x83, 0xc9, 0x42, 0xdb, 0xd2, 0x9c, 0xc9, 0x42, 0x62, 0xc3, 0xc2,
+	0x90, 0xca, 0x60, 0x80, 0xa1, 0x5d, 0xd2, 0xe4, 0x18, 0x92, 0x26, 0x2c, 0x0e, 0xd3, 0x90, 0x1d,
+	0x33, 0x0c, 0xed, 0xb2, 0xde, 0x9a, 0x60, 0xf7, 0x08, 0x96, 0xc7, 0x1d, 0xbc, 0xcc, 0x51, 0xc8,
+	0x9f, 0x34, 0xb0, 0x01, 0xda, 0xb9, 0xfe, 0xfb, 0x5a, 0x07, 0xda, 0x3a, 0x92, 0x9e, 0x40, 0xee,
+	0x6b, 0x7e, 0xbe, 0x11, 0xf7, 0x09, 0x2c, 0xdd, 0x63, 0x49, 0xf8, 0x1b, 0x4b, 0x0e, 0x94, 0x55,
+	0xa5, 0x72, 0x64, 0xcd, 0x49, 0x16, 0x1b, 0x53, 0xa6, 0xad, 0x69, 0xd3, 0xee, 0x07, 0x03, 0x6a,
+	0x85, 0xf8, 0xaf, 0xba, 0x2d, 0xba, 0x31, 0x27, 0xb1, 0x34, 0x61, 0x31, 0xa6, 0x49, 0x94, 0xd3,
+	0x08, 0x47, 0x5a, 0x13, 0x4c, 0x36, 0x00, 0xf0, 0x2c, 0x43, 0xce, 0x30, 0x09, 0x70, 0x94, 0xda,
+	0x14, 0x43, 0x08, 0x94, 0x32, 0x55, 0xa7, 0x42, 0x2b, 0xfb, 0x7a, 0x4d, 0x56, 0xa1, 0x1c, 0xb3,
+	0x21, 0x93, 0x76, 0x45, 0x93, 0x05, 0x70, 0xbb, 0x50, 0xbf, 0x8b, 0x31, 0x4a, 0xfc, 0xf3, 0x41,
+	0xba, 0xbb, 0xb0, 0x3c, 0xae, 0xbd, 0xa2, 0x29, 0xf7, 0xb3, 0x01, 0x25, 0x15, 0x97, 0xea, 0x06,
+	0x87, 0x94, 0xc5, 0xa3, 0xc3, 0x05, 0x50, 0x9e, 0x33, 0x2a, 0xc4, 0x69, 0xca, 0xc7, 0x45, 0x13,
+	0xac, 0xf6, 0x54, 0xc4, 0x09, 0x1d, 0x4e, 0xf2, 0x18, 0x63, 0x72, 0x0d, 0x6a, 0x31, 0x15, 0xf2,
+	0x19, 0x0d, 0x24, 0x3b, 0x29, 0x02, 0x29, 0xfb, 0xa0, 0xa8, 0x7d, 0xcd, 0xcc, 0x05, 0x56, 0xbe,
+	0x14, 0xd8, 0x3a, 0x54, 0xc7, 0xe1, 0x0a, 0xbb, 0xe2, 0x58, 0x5b, 0x55, 0xff, 0x82, 0xe8, 0x7c,
+	0xb2, 0xa0, 0xa6, 0xba, 0x7e, 0x8c, 0xfc, 0x84, 0x05, 0x48, 0x1e, 0x02, 0xdc, 0xe1, 0x48, 0x25,
+	0x6a, 0x2b, 0x2b, 0xa3, 0x5b, 0x30, 0x7d, 0x1b, 0x9b, 0xab, 0xb3, 0x64, 0x91, 0xad, 0xbb, 0xfa,
+	0xf6, 0xdb, 0xf7, 0xf7, 0x66, 0xdd, 0xad, 0x7a, 0x27, 0xbb, 0x9e, 0xbe, 0x30, 0x5d, 0xa3, 0x45,
+	0x7c, 0x80, 0x5e, 0x16, 0xfe, 0x85, 0xdc, 0x7f, 0x5a, 0x6e, 0xc5, 0xad, 0x4f, 0xe4, 0xbc, 0x57,
+	0x2c, 0x7c, 0xad, 0x34, 0x1f, 0x01, 0x14, 0xb3, 0x99, 0xd6, 0x9c, 0x99, 0xd6, 0x58, 0x73, 0x76,
+	0xfc, 0xee, 0x9a, 0xd6, 0x6c, 0xb4, 0xe6, 0x34, 0xc9, 0x7d, 0x58, 0x38, 0x44, 0x79, 0x70, 0xfe,
+	0x20, 0x24, 0xff, 0x14, 0x85, 0x53, 0xd7, 0xb9, 0x49, 0xa6, 0xa9, 0x59, 0x25, 0x32, 0xaf, 0x74,
+	0xa4, 0xbe, 0x84, 0x58, 0x22, 0xef, 0xe9, 0x2f, 0xe6, 0x8a, 0x6a, 0xff, 0x6b, 0xb5, 0x7f, 0xdd,
+	0xc6, 0x85, 0x9a, 0x40, 0xca, 0x83, 0x41, 0xd7, 0x68, 0x1d, 0x7c, 0x35, 0xde, 0xed, 0x7f, 0x31,
+	0xc8, 0x53, 0x58, 0x52, 0x3b, 0x8e, 0x28, 0xe6, 0xe4, 0x1e, 0xce, 0x62, 0xb2, 0x39, 0x90, 0x32,
+	0x13, 0x5d, 0xcf, 0x8b, 0x98, 0x1c, 0xe4, 0xfd, 0x76, 0x90, 0x0e, 0xbd, 0xe0, 0x45, 0xbf, 0x4f,
+	0xe3, 0xd8, 0x13, 0xc3, 0x9c, 0x1f, 0xb3, 0x64, 0x5b, 0xbf, 0x95, 0xf5, 0x7e, 0x4c, 0x07, 0xb7,
+	0x07, 0x34, 0xcb, 0xce, 0xdb, 0x29, 0x8f, 0x3a, 0xd6, 0x6e, 0x7b, 0xa7, 0x65, 0x1a, 0x66, 0xa7,
+	0x41, 0xb3, 0x2c, 0x66, 0x81, 0x7e, 0x0c, 0xbd, 0xe7, 0x22, 0x4d, 0xba, 0x97, 0x18, 0xff, 0x16,
+	0x58, 0x7b, 0x3b, 0x7b, 0xa4, 0x0d, 0xd7, 0x7d, 0x94, 0x39, 0x4f, 0x30, 0x74, 0x4e, 0x07, 0x98,
+	0x38, 0x1c, 0x45, 0x9a, 0xf3, 0x00, 0x9d, 0x30, 0x45, 0x91, 0x6c, 0x4a, 0x07, 0xcf, 0x98, 0x90,
+	0xa4, 0x02, 0xa5, 0x8f, 0xa6, 0xb1, 0xd0, 0xaf, 0xe8, 0xa7, 0xf5, 0xe6, 0x8f, 0x00, 0x00, 0x00,
+	0xff, 0xff, 0xb1, 0xf6, 0x95, 0xa1, 0xba, 0x05, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
